--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="image/Logo-Rumo_ao_Cariri.png" alt="logo" class="logo">
+        <img src="image/Logo-Rumo_ao_Cariri-lite.png" alt="logo" class="logo">
             <h1>Monumentos</h1>
             <h1>Personagens</h1>
             <h1>Eventos</h1>
@@ -19,10 +19,15 @@
     </header>
         <main>
             <img src="image/cariri titulo.png" alt="titulo" class="titulo">
-            <p class="sub-titulo">
-                A história do Cariri é rica e complexa, marcada por influências indígenas, colonizadoras e pela fé popular. A região, que compreende cidades como Juazeiro do Norte, Crato e Barbalha, possui um passado fascinante que moldou sua identidade cultural.
-            </p>
-            
+                 <p class="sub-titulo">
+                     A história do Cariri é rica e complexa, marcada por influências indígenas, colonizadoras e pela fé popular. A região, que compreende cidades como Juazeiro do Norte, Crato e Barbalha, possui um passado fascinante que moldou sua identidade cultural.
+                 </p>
+            <section class="parte1">
+                <img src="image/img1.png" alt="imagem1" class="img1">
+                    <p class="para1">
+                        Antes da chegada dos europeus, o território do Cariri era habitado por diversas etnias indígenas, como os Cariri, Tremembés e Jenipapos. Esses povos viviam em harmonia com a natureza, desenvolvendo uma cultura rica em tradições e conhecimentos sobre a região.
+                    </p>
+            </section>
         </main>
             <footer>
                  
